# odoo-sprint-release-demo

./: Dockerfile  Jenkinsfile  README.md  pyproject.toml
addons/t29_custom_1/: __manifest__.py
addons/t29_custom_1/data/: demo.xml
addons/t29_custom_1/models/: models.py
addons/t29_custom_1/security/: ir.model.access.csv
addons/t29_custom_2/: __manifest__.py
addons/t29_custom_2/data/: demo.xml
addons/t29_custom_2/models/: models.py
addons/t29_custom_2/security/: ir.model.access.csv
addons/t29_custom_3/: __manifest__.py
addons/t29_custom_3/data/: demo.xml
addons/t29_custom_3/models/: models.py
addons/t29_custom_3/security/: ir.model.access.csv
devops/config/: release_managers.yaml
docs/: odoo_deployment_pipeline.ppt
odoo/: README.md
